<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/logo"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-3dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="-3dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="16dp"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="16dp">

                        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                            android:id="@+id/full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person"
                            android:drawablePadding="8dp"
                            android:hint="@string/full_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:met_floatingLabel="highlight"/>

                        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                            android:id="@+id/mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawableStart="@drawable/ic_mobile"
                            android:drawablePadding="8dp"
                            android:hint="@string/mobile_no"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:met_floatingLabel="highlight"/>

                        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawableStart="@drawable/ic_phone"
                            android:drawablePadding="8dp"
                            android:hint="@string/phone_no"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:met_floatingLabel="highlight"/>

                        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                            android:id="@+id/location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawableStart="@drawable/ic_location"
                            android:drawablePadding="8dp"
                            android:hint="@string/location"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:met_floatingLabel="highlight"/>

                        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                            android:id="@+id/random"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawableStart="@drawable/ic_public"
                            android:drawablePadding="8dp"
                            android:hint="@string/random"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:met_floatingLabel="highlight"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/btn_search"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/search"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@drawable/color_state_list"
                    android:textSize="16sp"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>